ibuilder/tests/not_compile/struct_default.stderr
error: default value is supported only on plain types
 --> $DIR/struct_default.rs:5:5
  |
5 | /     #[ibuilder(default = 42)]
6 | |     field: Bar,
  | |______________^
